# syncmate

./: .gitignore  exclude copy.txt  exclude.txt  hash.ipynb  merge.ipynb  pyproject.toml  wocsync.da5.jsonl  wocsync.tasks.jsonl  wocsync.tasks.jsonl.copy
syncmate/: append_parts.py  base.py  generate.py  offuse.py  offuse2.py  upload_parts.py
